# spidyproject

./: .gitignore  .travis.yml  Parts_Robot.xlsx  README.md
Arduino_Programs/Accel_MPU6050/: Accel_MPU6050.ino
Arduino_Programs/SpidyFirmware/: MPU6050_DMP6.h  SpidyFirmware.ino  comunication.h  configuration.h  main.h  main.h.orig  messages.h  messages.h.BACKUP.19562.h  spidy.cpp  spidy.cpp.orig  spidy.h  ultrasound.h
Arduino_Programs/arduino_sergi_old/: arduino_sergi_old.ino
Arduino_Programs/coumication_pre/: coumication_pre.ino
Arduino_Programs/sketch_sep21a_prova_Servos/: sketch_sep21a_prova_Servos.ino  var.h
Comunication/: client_socket.py  client_socket_topic.py  client_socket_topic.py~  client_socket_topic_PC.py  client_socket_topic_PC.py.old  launcher.launch  server_i2c_socket.py  server_i2c_socket.py~  server_i2c_socket_Raspberry.py
Comunication/action/: PWM.action
Others/Robot_STL/: LegP_0.stl  LegP_1.STL  LegP_2.STL  LegP_3.STL  USSensorFrame.stl  USSensorFrameG.stl  base6servoTopPIHolder.stl
ROS/crab_description/: CMakeLists.txt  package.xml
ROS/spidy marc/spidy/: CMakeLists.txt  package.xml
ROS/spidy marc/spidy/launch/: display.launch
ROS/spidy marc/spidy/models/: crab_model.xacro
Robot_STL/: LegP_4.STL  LegP_5.STL  base6servo.stl  base6servoNo2Bar.stl  base6servoTop.stl
SpidyFirmware/: SpidyFirmware.ino  SpidyMEGA.cpp  SpidyMEGA.h  SpidyPCA.cpp  SpidyPCA.h  configuration.h  main.h  spidy.cpp  spidy.h
arduino programs (Case Conflict)/comunication_i2c+12_servos+ultrasound/: comunication_i2c+12_servos+ultrasound.ino
(+115 files in other folders)
